--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,16 @@
         "test_project/angular.json": true,
         "test_project/tsconfig.app.json": true,
         "test_project/tsconfig.json": true,
-        "test_project/tsconfig.spec.json": true
+        "test_project/tsconfig.spec.json": true,
+        "exo1/tsconfig.app.json": true,
+        "exo1/tsconfig.json": true,
+        "exo1/tsconfig.spec.json": true,
+        "exo1/angular.json": true,
+        "exo1/.editorconfig": true,
+        "exo1/package-lock.json": true,
+        "exo1/package.json": true,
+        "exo1/.vscode": true,
+        "exo1/node_modules": true
     },
     "hide-files.files": [
         "test_project/package-lock.json",
@@ -21,6 +30,15 @@
         "test_project/angular.json",
         "test_project/tsconfig.app.json",
         "test_project/tsconfig.json",
-        "test_project/tsconfig.spec.json"
+        "test_project/tsconfig.spec.json",
+        "exo1/tsconfig.app.json",
+        "exo1/tsconfig.json",
+        "exo1/tsconfig.spec.json",
+        "exo1/angular.json",
+        "exo1/.editorconfig",
+        "exo1/package-lock.json",
+        "exo1/package.json",
+        "exo1/.vscode",
+        "exo1/node_modules"
     ]
 }
